[package]
name = "mesh_world"
version = "0.1.0"
edition = "2021"

[workspaces]
members = ["engine"]


[dependencies]
engine = { path = "../engine" }
bytemuck = "1.14.3"
gl = "0.14.0"
glfw = "0.55.0"
image = "0.25.0"
nalgebra-glm = "0.18.0"
egui_gl_glfw = "0.1.1"
egui = "0.26.2"
cgl-rs = "0.1.7"
seeded-random = "0.6.0"
